# Journal-Finder

./: .gitignore  README.md  SPEC.md
.github/workflows/: build-macos.yml  release.yml
.mimocode/command/: check.md
.mimocode/plans/: 1781245780074-cosmic-forest.md
app/: .gitignore  index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  ProgressBar.tsx  Sidebar.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src-tauri/src/commands/: docx.rs  journal.rs  llm.rs  mod.rs  project.rs  report.rs  summary.rs
app/src-tauri/src/core/: deep_research.rs  deep_research_api.rs  docx_extract.rs  llm_client.rs  mod.rs  prompts.rs  report.rs  summary.rs
app/src/components/: DeepResearchApiRunner.tsx  PasteModal.tsx
app/src/panels/: HomePanel.tsx  InputPanel.tsx  JournalPanel.tsx  JournalSearchPanel.tsx  LogPanel.tsx  PositioningPanel.tsx  ResultsPanel.tsx  SettingsPanel.tsx  SummaryPanel.tsx
app/src/utils/: translate.ts
docs/: SPEC_CITATION_DB.md  SPEC_CITATION_EXTRACTION.md  SPEC_CLI.md  SPEC_LLM.md  SPEC_PREPROCESS.md  SPEC_PROJECT_STRUCTURE.md
docs/implementation_logs/: 2026-05-07_phase1-implementation.md
