[package]
name = "journal-finder"
version = "0.1.1"
description = "Journal Finder - Academic Journal Recommendation Tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
zip = "2"
quick-xml = "0.37"
docx-rs = "0.4"
base64 = "0.22"
